reference information is supplied with.  For a full list of changes
with all sufficient information, see the ChangeLog file.

== Changes since the 2.1.0 release

=== Language changes

=== Core classes updates (outstanding ones only)

* Enumerable
  * Extended methods:
    * min, min_by, max and max_by supports optional argument to return
      multiple elements.

* Symbol
  * New methods
    * Symbol.find(str) returns whether given string is defined as symbol or not.
  * Improvements
    * Most symbols which are returned by String#to_sym and
      String#intern are GC-able.

* Matrix
  * New methods:
    * Matrix#first_minor(row, column) returns the submatrix obtained
      by deleting the specified row and column.
    * Matrix#cofactor(row, column) returns the (row, column) cofactor
      which is obtained by multiplying the first minor by (-1)**(row + column).

=== Core classes compatibility issues (excluding feature bug fixes)

* IO
  * incompatible changes:
    * When flushing file IO, you cannot assume that the metadata of the file
      is updated immediately.  On some platforms (especially Windows), it is
      delayed until the filesystem load is decreased.
* Proc
  * incompatible changes:
    * ArgumentError is no longer raised when lambda Proc is passed as a
      block, and the number of yielded arguments does not match the formal
      arguments of the lambda, if just an array is yielded and its length
      matches.

=== Stdlib updates (outstanding ones only)

* Find, Pathname
  * Extended methods:
    * find method accepts "ignore_error" keyword argument.

=== Stdlib compatibility issues (excluding feature bug fixes)

=== Built-in global variables compatibility issues

=== C API updates

* Deprecated APIs removed.  [Feature #9502]

  Check_SafeStr -> SafeStringValue
  rb_check_safe_str -> SafeStringValue
  rb_quad_pack -> rb_integer_pack
  rb_quad_unpack -> rb_integer_unpack
  rb_read_check : access struct FILE internal. no replacement.