@@ -20,6 +20,11 @@ with all sufficient information, see the ChangeLog file.
     * min, min_by, max and max_by supports optional argument to return
       multiple elements.
 
+* String
+  * New methods
+    * String#purge purges the content of a string in secure manner as
+      possible, shrinks, and returns it.
+
 * Symbol
   * New methods
     * Symbol.find(str) returns whether given string is defined as symbol or not.
